# actix_mvc_crud_rs

./: Cargo.toml
src/: main.rs
src/controllers/: echo_controller.rs  home_controller.rs  manual_controller.rs  mod.rs
src/views/: base.html  index.html
